# hydraa-faas

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  pylint.yml
examples/: README.md  agent_examples.ipynb  basic_lambda_deployment.ipynb  ecr_lambda_deployment.ipynb  test.py
examples/agent_functions/: create_agent_functions.py
examples/aws/: lambda.ipynb
examples/aws/lambda_functions/data_processor/: aggregator.py  data_utils.py  processor.py
examples/benchmark/: Dockerfile  creds.json  lambda_benchmark.py  nuclio_benchmark.py  plot_custom.py
examples/benchmark/benchmark_results/: results.json
examples/benchmark/test-func/: function.yaml  handler.py
examples/container_functions/: create_ecr_functions.py
examples/custom/: nuclio_eks.ipynb  nuclio_local.ipynb
examples/lambda_functions/: create_functions.py
examples/my_lambda_function/: handler.py
src/hydraa_faas/: manager.py  test_manager.py
src/hydraa_faas/agent/: Dockerfile  README.md  agent-deployment.yaml  app.py  requirements.txt
src/hydraa_faas/agent_deprecated/: app.py  requirements.txt
src/hydraa_faas/faas_manager/: agent_faas.py  aws_lambda.py  custom_faas.py  manager.py
src/hydraa_faas/function_task/: function_task.py
src/hydraa_faas/utils/: ecr_helper.py  exceptions.py  metrics_collector.py  nuclio_gateway.py  packaging.py  registry.py  resource_manager.py
tests/: test_agent_faas.py  test_aws_lambda.py  test_custom.py  test_lambda.py  test_manager.py  test_managers.py
(+59 files in other folders)
